...
  }

  Future<void> guardarConfiguracion() async {
    if (imeiDispositivo == null) {
      Notificador.mostrar(
        context: context,
        mensaje: "❌ Error: IMEI no disponible",
        tipo: TipoNotificacion.success,
      );
      /*ScaffoldMessenger.of(context).showSnackBar(
        const SnackBar(content: Text("❌ Error: IMEI no disponible")),
      );*/
      return;
...
    if (ok) {
      /*ScaffoldMessenger.of(
        context,
      ).showSnackBar(const SnackBar(content: Text("✅ Configuración guardada")));*/
      Notificador.mostrar(
        context: context,
        mensaje: "Configuración guardada",
        tipo: TipoNotificacion.success,
      );
      // Llamar al service que publica al A9G por MQTT
      await mqttService.enviarConfiguracion(nuevaConfig);
    }
  }
...
                ElevatedButton(
                  onPressed: () => Navigator.pop(context, true),
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.purple, // Color morado del botón
                    foregroundColor: Colors.white,
                  ),
                  child: const Text("Sí"),
                ),
              ],
            ),
      );

      if (confirmar != true) return;
...
      Notificador.mostrar(
        context: context,
        mensaje: "📍 Zona segura registrada",
        tipo: TipoNotificacion.success,
      );
      /* ScaffoldMessenger.of(context).showSnackBar(
        const SnackBar(content: Text("Zona segura registrada")),
      );*/
    } else {
      Notificador.mostrar(
        context: context,
        mensaje: "❌ Error: ${response['error'] ?? ''}",
        tipo: TipoNotificacion.error,
...
                          padding: const EdgeInsets.symmetric(
                            horizontal: 16,
                            vertical: 8,
                          ),
                        ),
                        child: Text(
                          "Guardar configuraciones",
                          style: GoogleFonts.montserrat(color: Colors.white),
                        ),
                      ),
                    ),
                  ],
                ),
...
                                "Zona actual",
                                style: GoogleFonts.montserrat(
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
                              subtitle: Text(
                                "Latitud: ${zonaActual!.latitud}\nLongitud: ${zonaActual!.longitud}\nRadio: ${zonaActual!.radioMetros} m",

                                style: GoogleFonts.montserrat(),
                              ),
                            ),
                          ),
                        ),
...
                        },
                      ),
                      TextFormField(
                        controller: longitudController,
                        keyboardType: TextInputType.number,
                        decoration: const InputDecoration(
                          labelText: "Longitud",
                        ),
                        validator: (value) {
                          final lon = double.tryParse(value ?? '');
                          if (lon == null || lon < -180 || lon > 180) {
                            return "Longitud inválida (-180 a 180)";
                          }
...
                        },
                      ),
                      TextFormField(
                        controller: radioController,
                        keyboardType: TextInputType.number,
                        decoration: const InputDecoration(
                          labelText: "Radio (m)",
                        ),
                        validator: (value) {
                          final radio = double.tryParse(value ?? '');
                          if (radio == null || radio < 10) {
                            return "Radio mínimo permitido: 10m";
                          }
...
                                padding: const EdgeInsets.symmetric(
                                  horizontal: 16,
                                  vertical: 8,
                                ),
                              ),
                              child: Text(
                                "Registrar zona segura",
                                style: GoogleFonts.montserrat(
                                  color: Colors.white,
                                ),
                              ),
                            ),
                            const SizedBox(width: 12), // Espacio entre botones
...
