...
                    : ListView.builder(
                      itemCount: dispositivosFiltrados.length,
                      itemBuilder: (context, index) {
                        final dispositivo = dispositivosFiltrados[index];
                        return ListTile(
                          title: Text(
                            'IMEI: ${dispositivo.imei}',
                            style: GoogleFonts.montserrat(
                              fontWeight: FontWeight.bold,
                            ),
                          ),
                          subtitle: Column(
                            crossAxisAlignment: CrossAxisAlignment.start,
...
                ),
                onPressed: () {
                  Navigator.pop(ctx);
                  Navigator.pushNamed(context, '/animales');
                },
                child: const Text(
                  'Ir a Animales',
                  style: TextStyle(color: Colors.white),
                ),
              ),
            ],
          ),
    );
...
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                    const SizedBox(height: 20),
                    campoBurbuja(
                      context: ctx,
                      label: "Número",
                      controller: numeroCelularController,
                      icon: Icons.phone_android,
                      validator: validarNumeroCelularEcuador,
                      colorIndex: 0,
                      maxLength: 10,
                    ),
...
                                mensaje: "Error al crear el dispositivo",
                                tipo: TipoNotificacion.error,
                              );
                            }
                          },
                          child: Text(
                            'Guardar',
                            style: GoogleFonts.montserrat(color: Colors.white),
                          ),
                        ),
                      ],
                    ),
                  ],
...
